<resources>
    <string name="app_name">CricAcad</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_play">Play</string>
    <string name="title_profile">Profile</string>
    <string name="title_news">News</string>
    <string name="todo">TODO</string>
    \
    <string name="title_decision">Umpire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>